--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -1,5 +1,5 @@
     body {
-        background-color: black;
+        background-color: #202731;
         margin: 0;
         display: flex;
         flex-direction: column;
@@ -198,4 +198,9 @@
 
 .glowing span:nth-child(6n+6) {
     animation: scaleUp 8s alternate infinite;
+}
+
+
+#screen-container{
+    position: relative;
 }
