--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -1,6 +1,7 @@
     body {
         background-color: #202731;
         margin: 0;
+        padding: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -203,4 +204,30 @@
 
 #screen-container{
     position: relative;
+}
+
+
+.spacer{
+    aspect-ratio: 900/550;
+    width: 100%; 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: absolute;
+    z-index: -1;
+
+}
+
+.layer1{
+    background-image: url('../../img/layered-waves-haikei.svg');
+
+}
+
+.layer2{
+    background-image: url('../../img/waves.svg');
+}
+
+.flip{
+    transform: rotate(180deg);
+    /* bottom: 0;  */
 }
