--- a/public/assets/styles/skills.css
+++ b/public/assets/styles/skills.css
@@ -5,5 +5,24 @@
         }
 
         #skills{
-            padding-top: 15em;
+            /* padding-top: 15em; */
+            padding: 15em 1em;
+            padding-bottom: 3em;
+            position: relative;
+            z-index: 100;
         }
+
+        #visual{
+            position: absolute;
+              top: 50%;
+    left: 50%;
+    transform: translate(-50%, -10%);
+    z-index: -1;
+    opacity: 0.8;
+        }
+
+
+/* .info{
+    position: relative;
+
+} */
