--- a/public/assets/styles/portfolio.css
+++ b/public/assets/styles/portfolio.css
@@ -42,6 +42,8 @@
             padding-top: 7em;
             color: black;
             width: 100%;
+            background-color: aqua;
+            margin-bottom: 0;
          
             
           
