--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -213,7 +213,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* position: absolute; */
+    position: absolute;
     z-index: -1;
 
 }
@@ -223,14 +223,11 @@
 
 }
 
-
-
 .layer2{
-    background-image: url('../../img/white-layer.svg');
+    background-image: url('../../img/waves.svg');
 }
 
 .flip{
     transform: rotate(180deg);
     /* bottom: 0;  */
-    /* z-index: -1; */
 }
