swap skills and portfolio link

--- a/public/assets/styles/screen.css
+++ b/public/assets/styles/screen.css
@@ -59,3 +59,13 @@
             font-size: x-large;
             cursor: pointer;
         }
+
+            #screen {
+            margin-top: 2em;
+            height: 95vh;
+            margin: auto;
+            display: block;
+        }
+
+
+
