--- a/public/assets/styles/about.css
+++ b/public/assets/styles/about.css
@@ -1,8 +1,8 @@
 #about {
     overflow: hidden;
     min-height: 100vh;
-    font-size: small;
-    border: 4px solid black;
+
+    /* border: 4px solid black; */
     position: relative;
   
     /* padding: 2em; */
@@ -68,5 +68,24 @@
 
 }
 
+    .about-container {
+            /* font-family: 'pixel', sans-serif; */
+        
+            /* background-color: rgb(117, 110, 121); */
+            padding: 2em;
 
+        }
+
+
+        
+        #about-link {
+            bottom: 50%;
+            left: 11%;
+        }
+
+
+        #about{
+            margin-top:5em;
+            padding: 1em;
+        }
 
