--- a/public/assets/styles/education.css
+++ b/public/assets/styles/education.css
@@ -6,8 +6,8 @@
             display: flex;
             flex-direction: row;
             /* font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-            font-family: 'pixel', sans-serif;
-            font-size: 20px;
+            font-family: 'mario', sans-serif;
+            font-size: 14px;
             padding: 1em;
         }
 
@@ -24,7 +24,7 @@
         
         .education-card li{
     
-    line-height: 17px;
+    line-height: 20px;
     margin-bottom: 10px;
 
         }
