--- a/public/assets/styles/portfolio.css
+++ b/public/assets/styles/portfolio.css
@@ -1,52 +1,53 @@
-      .portfolio-container {
-            display: flex;
-            flex-wrap: wrap;
-        }
+.portfolio-container {
+    display: flex;
+    flex-wrap: wrap;
+}
 
-        .portfolio-card {
-            flex-basis: calc(48% - 0.6rem);
-            /* Adjust the value accordingly */
-            margin: 1.2rem;
-            background-color: gainsboro;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-
-        }
-
-        
-        .portfolio-image {
-            transition: 0.3s ease-in-out;
-            width: 100%;
-        }
-
-           .portfolio-image:hover {
-            transform: scale(1.03);
-        }
-
-            .portfolio-video {
-            width: 100%;
-            object-fit: cover;
-        }
-
-          #portfolio-link {
-           bottom: 51%;
-            left: 47%;
-
-        }
+.portfolio-card {
+    flex-basis: calc(48% - 0.6rem);
+    /* Adjust the value accordingly */
+    margin: 1.2rem;
+    background-color: rgb(117, 110, 121);
+    box-shadow: 4px 10px 8px rgba(0, 0, 0, 0.7);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 
-        #portfolio{
-            position: relative;
-            background-color: whitesmoke;
-            padding-top: 7em;
-            color: black;
-            width: 100%;
-         
-            
-          
-        }
+}
+
+
+.portfolio-image {
+    transition: 0.3s ease-in-out;
+    width: 100%;
+}
+
+.portfolio-image:hover {
+    transform: scale(1.03);
+}
+
+.portfolio-video {
+    width: 100%;
+    object-fit: cover;
+}
+
+#portfolio-link {
+    bottom: 51%;
+    left: 47%;
+
+}
+
+
+#portfolio {
+    position: relative;
+    background-color: whitesmoke;
+    padding-top: 7em;
+    color: black;
+    width: 100%;
+
+
+
+}
 
 
 
@@ -59,20 +60,21 @@
 
 
 
-     .all-github {
-         
-            display: flex;
-            flex-direction: row;
-            background: gold;
-            align-items: center;
-            color: black;
-            /* background-color: white; */
-                background: linear-gradient(to bottom, whitesmoke, white);
+.all-github {
+
+    display: flex;
+    flex-direction: row;
+    background: gold;
+    align-items: center;
+    color: black;
+    /* background-color: white; */
+    background: linear-gradient(to bottom, whitesmoke, white);
     /* background-color: white; */
     /* transition: background 0.5s ease;  */
-    
 
-        }
+
+}
+
 .custom-shape-divider-top-1703875443 {
     position: absolute;
     top: 0;
@@ -94,6 +96,6 @@
 }
 
 
-#portfolio h2{
- padding: 1em;
+#portfolio h2 {
+    padding: 1em;
 }
