--- a/public/assets/styles/skills.css
+++ b/public/assets/styles/skills.css
@@ -31,3 +31,11 @@
 .skills-card li {
     margin-bottom: 10px;
 }
+
+.skills-card:nth-child(2){
+    transition-delay: 200ms;
+}
+
+.skills-card:nth-child(3){
+    transition-delay: 400ms;
+}
