--- a/public/assets/styles/about.css
+++ b/public/assets/styles/about.css
@@ -29,37 +29,7 @@
     position: relative;
 }
 
-.curve {
-    position: absolute;
-    height: 225px;
-    width: 100%;
-    bottom: 0;
-}
 
-.curve::before {
-    content: '';
-    display: block;
-    position: absolute;
-    border-radius: 100% 50%;
-    width: 55%;
-    height: 100%;
-    background-color: #202731;
-    transform: translate(85%, 60%);
-
-}
-
-.curve::after {
-    content: '';
-    display: block;
-    position: absolute;
-    border-radius: 100% 50%;
-    width: 55%;
-    height: 100%;
-    background-color: #3c31dd;
-    transform: translate(-4%, 40%);
-    z-index: -1;
-
-}
 
 .about-container {
     padding: 2em;
@@ -126,4 +96,22 @@
 
 .custom-shape-divider-bottom-1703946457 .shape-fill {
     fill: #202731;
+}
+
+
+
+
+@media only screen and (max-width: 600px) {
+
+
+    #about{
+     
+    margin-top: 200px;
+    }
+
+    .portfolio-pic{
+        width: 100%; 
+    }
+
+
 }
