--- a/public/assets/styles/screen.css
+++ b/public/assets/styles/screen.css
@@ -67,5 +67,16 @@
             display: block;
         }
 
+@media only screen and (max-width: 600px) {
 
+
+/* #screen{
+    width: 1300px;
+} */
+
+#screen-container{
+    display:none;
+}
+
+}
 
