--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -318,3 +318,20 @@ body {
 *::-ms-scrollbar-thumb {
   background-color: whitesmoke;
 }
+
+* {
+  box-sizing: border-box;
+}
+@media only screen and (max-width: 600px) {
+
+body{
+ width: 100% !important; 
+ zoom: 1;
+ background-color: #f00;
+}
+
+.info{
+width: 100%; 
+}
+
+}
