--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -20,8 +20,8 @@ body {
     background-color: #202731;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     align-items: center;
     justify-content: center;
     color: white;
@@ -322,16 +322,15 @@ body {
 * {
   box-sizing: border-box;
 }
-@media only screen and (max-width: 600px) {
-
-body{
- width: 100% !important; 
- zoom: 1;
- background-color: #f00;
-}
 
 .info{
-width: 100%; 
+    width: 100%;
+}
+@media only screen and (max-width: 600px) {
+
+
+.info{
+width: 250vw; 
 }
 
 }
