--- a/public/assets/styles/about.css
+++ b/public/assets/styles/about.css
@@ -22,7 +22,7 @@
     border-radius: 6px;
     padding: 2em;
     font-size: 15px;
-    
+
 }
 
 .about-container {
@@ -44,7 +44,7 @@
 
 
 #about {
-    margin-top: 400px;
+    margin-top: 75vh;
     padding: 1em;
     position: relative;
     padding-top: 0;
@@ -52,11 +52,11 @@
 }
 
 
-        #contact {
-            margin-top: 4em;
-        }
+#contact {
+    margin-top: 4em;
+}
 
-        .custom-shape-divider-top-1703946356 {
+.custom-shape-divider-top-1703946356 {
     position: absolute;
     top: 0;
     left: 0;
@@ -104,23 +104,23 @@
 @media only screen and (max-width: 600px) {
 
 
-    #about{
-     
-    margin-top: 200px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-   
+    #about {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 35vh;
+        padding-bottom: 10%;
+
     }
 
- 
-    
-    .title{
-    text-align: left;
-    width: 100%;
+
+
+    .title {
+        text-align: left;
+        width: 100%;
     }
 
-   
+
 
 }
