--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -35,6 +35,30 @@ body {
 }
 
 
+#about,
+#education,
+#skills,
+#portfolio,
+#socials {
+    margin-bottom: 10em;
+    /* position: relative; */
+}
+
+#about-link,
+#education-link,
+#skills-link,
+#portfolio-link,
+#socials-link {
+    position: absolute;
+    z-index: 1;
+    text-decoration: none;
+    color: white;
+    display: none;
+    font-family: 'mario', sans-serif;
+}
+
+
+
 
 #screen-container {
     position: relative;
@@ -62,6 +86,7 @@ body {
     /* z-index: -100; */
 
 }
+
 .layer1 {
     background-image: url('../../img/layered-waves-haikei.svg');
 
@@ -76,24 +101,24 @@ body {
     /* bottom: 0;  */
 }
 
-.info{
+.info {
     position: relative;
 }
 
-#top-wave{
-    position: absolute; 
+#top-wave {
+    position: absolute;
     top: -10%;
 }
 
-.hidden{
- opacity: 0; 
- transition: all 1s; 
- /* filter: blur(5px);
+.hidden {
+    opacity: 0;
+    transition: all 1s;
+    /* filter: blur(5px);
  transform: translateX(-100%); 
  transition: all 1s;  */
 }
 
-.show{
+.show {
 
     opacity: 1;
     /* filter: blur(0); 
@@ -101,55 +126,192 @@ body {
 
 }
 
-@media(prefers-reduced-motion){
-    .hidden{
+@media(prefers-reduced-motion) {
+    .hidden {
         transition: none;
     }
 }
 
 /* For Webkit browsers like Chrome or Safari */
 ::-webkit-scrollbar {
-  width: 8px;
+    width: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: whitesmoke;
-  border-radius: 10px;
+    background-color: whitesmoke;
+    border-radius: 10px;
 }
 
 * {
-  scrollbar-width: thin;
-  scrollbar-color: whitesmoke transparent;
+    scrollbar-width: thin;
+    scrollbar-color: whitesmoke transparent;
 }
 
 
 *::-ms-scrollbar {
-  width: 5px;
+    width: 5px;
 }
 
 *::-ms-scrollbar-thumb {
-  background-color: whitesmoke;
+    background-color: whitesmoke;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-.info{
+.info {
     width: 100%;
 }
+
+label #btn, label #cancel, .sidebar{
+    display: none; 
+}
+
+
+    #check{
+        display: none;
+    }
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 600px) {
 
 
 
-.info{
-width: 250vw; 
+    .info {
+        width: 250vw;
+    }
+
+    #top-wave {
+
+        top: -300px;
+    }
+
+        label #btn, label #cancel, .sidebar{
+    display: block; 
 }
 
-#top-wave{
-   
-    top: -300px;
-}
+        .sidebar {
+        position: fixed;
+        top: 0;
+        left: -400px;
+        text-decoration: none;
+        width: 400px;
+        height: 100%;
+        background-color:#202731;
+        z-index: 1000; 
+        transition: 0.5s ease;
+        font-size: x-large;
+        /* padding: 2em; */
+
+    }
+
+    .sidebar header {
+        font-size: xx-large;
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 70px;
+        background: rgba(117, 110, 121);
+        padding: 1em;
+        padding-top: 3em;
+        user-select: none;
+    }
+ .sidebar ul {
+        list-style-type: none;
+        padding: 0; 
+        margin: 0;
+    } 
+    
+    .sidebar ul li{
+        width: 100%; 
+        display: block;
+    } 
+
+    .sidebar ul  a{
+        text-decoration: none;
+        display: block;
+        height: 100%;
+        width: 100%; 
+        line-height: 100px;
+        color: white;
+        padding-left: 40px;
+        box-sizing: border-box;
+        border-top: 1px solid rgba(255, 255, 255, .1);
+        border-bottom: 1px solid black;
+        transition: 0.3s ease-in-out; 
+    }
+
+    .sidebar ul li:hover a {
+        padding-left: 50px;
+    }
+
+    .sidebar ul a i{
+        margin-right: 16px;
+    }
+
+    label #btn, label #cancel{
+        position: fixed;
+        cursor: pointer;
+        z-index: 1000; 
+        background-color: #202731;
+        border-radius: 3px; 
+    }
+
+    label #btn{
+        left: 40px; 
+        top: 25px; 
+        font-size: 75px; 
+        color: white;
+        padding: 6px 20px;
+        transition: all .8s ease;
+        border-radius: 10px;
+    }
+
+    label #cancel{
+        z-index: 1111; 
+        left: -100px; 
+        top: 17px; 
+        font-size: 50px; 
+        padding: 4px 9px;
+        color: rgba(117, 110, 121);
+        transition: all .5s ease;
+        border-radius: 10px;
+    }
+
+    #check:checked ~ .sidebar{
+        left: 0;
+    }
+
+    #check:checked ~ label #btn{
+        left: 250px; 
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    #check:checked ~ label #cancel{
+        left: 340px; 
+    }
+
+
+    #check:checked ~ section{
+        margin-left: 400px;
+    }
+
+    .sidebar-message{
+        background-color: #BB004B;
+        padding: 1em;
+        margin-top: 3em;
+        line-height: 30px;
+    }
+
+
+
 
 
 
