--- a/public/assets/styles/education.css
+++ b/public/assets/styles/education.css
@@ -241,9 +241,10 @@
 
 
     .glowing {
-        position: -webkit-sticky;
-        position: sticky;
-        top: 0;
+        /* position: -webkit-sticky; */
+        /* position: sticky;
+        top: 0; */
+        display: none;
     }
 
     .education-card {
