--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -209,6 +209,7 @@ label #btn, label #cancel, .sidebar{
         transition: 0.5s ease;
         font-size: x-large;
         /* padding: 2em; */
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
     }
 
