--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -210,6 +210,7 @@ label #btn, label #cancel, .sidebar{
         font-size: x-large;
         /* padding: 2em; */
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        opacity: 0.9;
 
     }
 
@@ -301,7 +302,9 @@ label #btn, label #cancel, .sidebar{
 
 
     #check:checked ~ section{
-        margin-left: 400px;
+         position: relative;
+    top: 40px;
+
     }
 
     .sidebar-message{
